# Course-MonteCarlo-EN

./: about.md  codingame.yml
markdowns/: areacalc.md  circle.md  combo.md  final.md  intersection.md  intro.md  irregular.md  rectangle.md  simple.md  subtraction.md  union.md
projects/montecarlo/: CMakeCache.txt  CMakeLists.txt  Makefile  circle.cpp  cmake_install.cmake  combo.cpp  irregular.cpp  loadshapes.js  rectangle.cpp  tests.cpp  visor.html
projects/montecarlo/circle/: CMakeLists.txt  Circle  Makefile  circle.cpp  cmake_install.cmake
projects/montecarlo/combo/: CMakeLists.txt  combo.cpp
projects/montecarlo/intersection/: CMakeLists.txt  intersection.cpp
projects/montecarlo/irregular/: CMakeLists.txt  irregular.cpp
projects/montecarlo/rectangle/: CMakeLists.txt  Makefile  Rectangle  cmake_install.cmake  rectangle.cpp
projects/montecarlo/simple/: CMakeLists.txt  simple.cpp
projects/montecarlo/subtraction/: CMakeLists.txt  subtraction.cpp
projects/montecarlo/union/: CMakeLists.txt  union.cpp
